Add changes from @shashankmehta

--- a/disclosure.html
+++ b/disclosure.html
@@ -25,21 +25,26 @@
           <h1>Privacy & Security</h1>
           <h2 class="span">Responsible Disclosure Policy</h2><br>
         </div>
-          <p>
-          If you have a security issue to report regarding problems with your password or other login issues please contact us at <a href="mailto:contact@sdslabs.co.in">contact@sdslabs.co.in</a>.<br><br>
-          If you believe you have discovered a security vulnerability in any of our apps or if you have a incident of security breach to report, you are requested to disclose it to us in a responsible manner by contacting us at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> instead of disclosing it publicly as it can put important personal information at risk.<br><br>
-
+        <p>
+          If you have any issue to report regarding problems with your login credentials please contact us at <a href="mailto:contact@sdslabs.co.in">contact@sdslabs.co.in</a>.
+        </p>
+        <p>
+          If you believe you have discovered a security vulnerability in any of our apps or if you have a incident of security breach to report, you are requested to disclose it to us in a responsible manner by contacting us at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> instead of disclosing it publicly as it can put important personal information at risk.
+        </p>
+        <p>
           We take all the security issues seriously and do our best to quickly fix the problem, if any, as soon as possible. All mails sent to <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> are our topmost priority.<br><br>
-
-          Though we are aware that "everything can be hacked" yet we have taken sufficient precautionary measures to secure all the data that we have. So if you like working in security, or want to learn about ethical hacking, and agree to <b>adhere to our disclosure policy</b> you are welcome to try to hack us. But make sure you report the vulnerability to us only at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> and not disclose it publicly.
-          <div class="footer">
-            <ul class="footerlinks">
-              <li>&copy; SDSLabs <span class="current-year"></span></li>
-              <li><a href="/security/">FAQ</a></li>
-              <li class="active">Responsible Disclosure</li>
-              <li><a href="/security/tc">Terms & Conditions</a></li>
-            </ul>
-          </div>
+        </p>
+        <p>
+          We are aware that "everything can be hacked" and hence we have taken whatever precautionary measures we could to secure all the data that we have. So if you are interested in ethical hacking and agree to <span class="stress">adhere to our disclosure policy</span>, you are welcome to try and hack us. But make sure that you report the vulnerability to us at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> and not disclose it publicly.
+        </p>
+        <div class="footer">
+          <ul class="footerlinks">
+            <li>&copy; SDSLabs <span class="current-year"></span></li>
+            <li><a href="/security/">FAQ</a></li>
+            <li class="active">Responsible Disclosure</li>
+            <li><a href="/security/tc">Terms & Conditions</a></li>
+          </ul>
+        </div>
       </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
