--- a/index.html
+++ b/index.html
@@ -25,35 +25,33 @@
           <h1>Privacy & Security</h1>
           <h2 class="span">FAQ</h2><br>
         </div>
-          <div class="span">Do you want to report a security vulnerabilty? Go <a href="disclosure.html">here</a>.</div>
+          <div class="span">Do you want to report a security vulnerabilty? Click <a href="disclosure.html">here</a>.</div>
           <p class="heading">
-            <div class="heading">From where does SDSLabs get information about me?</div>
-            <div class="answer"><br>
-              The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
-              <h5>The institute provides us with no data at all.</h5>
-               So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration).We don't have anybody's passwords or any other personal information apart from that listed already.
-              <p><br>
-            </div>
-            <div class="heading">Who can access this information?</div>   
-            <div class="answer"><br>
-              This limited amount of personal data which we have is accessible only to the few members of our <a href="https://sdslabs.co.in/team">team.</a><p><br>
-            </div>
-            <div class="heading">You know the password I used to register!</div>
-            <div class="answer"><br>
-              The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
-            </div>
-            <div class="heading">Are you monitoring what I share or download from DC++?</div>
-            <div class="answer"><br>
-              No we don't. DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), its very difficult to track them and they are not being tracked as well.<p><br>
-            </div>
-            <div class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
-            <div class="answer"><br>
-              No, you do not enter your Facebook password on SDSLabs site, we redirect you to Facebook.com where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing more. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
-            </div>
-            <div class="heading">Hmm I am still doubtful...</div>
-            <div class="answer"><br>
-              We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
-            </div><br>
+            <h3>From where does SDSLabs get the information about me?</h3>
+            <p>
+              All the data that we have is either provided to use by the users themselves or is publicly available. We use courses data from 192.168.121.2/studentlist to help users during their registration. Email address and phone numbers are provided by the users themselves. We <span class="stress">do not</span> have any other personal information apart from the ones listed above.
+              <span class="stress">The instiute does not exclusively provide us with any data.</span>
+            </p>
+            <h3>Who has access to this information?</h3>
+            <p>
+              User's data stored in our servers is accessibile to only a few members of our <a href="https://sdslabs.co.in/team">team.</a>
+            </p>
+            <h3>But you do know the password I used to register, right?</h3>
+            <p>
+              Passwords are <span class="stress">not</span> stored in plain text. They are encrypted in a non-reversilble manner. Hence SDSLabs has no idea whatsover about the user's password.
+            </p>
+            <h3>Are you monitoring what I share or download from DC++?</h3>
+            <p>
+              <span class="stress">No</span>, we don't. DC++ is runs in an open mode, which means that it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), it's very difficult to track them. SDSLabs <span class="stress">does not</span> track downloads.
+            </p>
+            <h3>If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</h3>
+            <p>
+              No, you <span class="stress">do not</span> enter your Facebook password on SDSLabs' site, we redirect you to Facebook where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing more. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS protocol</a> to secure all communications between end user and our servers.
+            </p>
+            <h3>I am still doubtful.</h3>
+            <p>
+              We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via email or meet us personally and we will try our best to answer all your queries satisfactorily.
+            </p>
             <div class="footer">
               <ul class="footerlinks">
                 <li>&copy; SDSLabs <span class="current-year"></span></li>
