--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
             <h3>But you do know the password I used to register, right?</h3>
             <p>
-              Passwords are <span class="stress">not</span> stored in plain text. They are encrypted in a non-reversilble manner. Hence SDSLabs has no idea whatsover about the user's password.
+              Passwords are <span class="stress">not</span> stored in plain text. They are encrypted in a non-reversible manner. Hence SDSLabs has no idea whatsover about the user's password.
             </p>
             <h3>Are you monitoring what I share or download from DC++?</h3>
             <p>
